# noriskclient-launcher

./: .gitignore  .prettierignore  .prettierrc  README.md  bun.lockb  crash.html  index.html  jsconfig.json  logs.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  check-rust.yml
contrib/: gg.norisk.noriskclient.desktop
src/: App.svelte  Router.svelte  app.css  global.css  main.js  small-scrollbar.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/addons/: datapack_manager.rs  mod.rs  mod_manager.rs  progress.rs  resourcepack_manager.rs  shader_manager.rs
src-tauri/src/app/: api.rs  app_data.rs  assets_api.rs  cape_api.rs  gui.rs  mclogs_api.rs  mod.rs  modrinth_api.rs  nrc_cache.rs
src-tauri/src/custom_servers/: forwarding_manager.rs  manager.rs  mod.rs  models.rs
src-tauri/src/custom_servers/providers/: bukkit.rs  fabric.rs  folia.rs  forge.rs  forwarding_manager.rs  mod.rs  neoforge.rs  paper.rs  purpur.rs  quilt.rs  spigot.rs  vanilla.rs
src-tauri/src/minecraft/: auth.rs  launcher.rs  minecraft_auth.rs  mod.rs  prelauncher.rs  progress.rs  rule_interpreter.rs  version.rs
src-tauri/src/minecraft/java/: jre_downloader.rs  mod.rs  runtime.rs
src-tauri/src/utils/: checksum.rs  copy_mc_data.rs  download.rs  extract.rs  maven.rs  mod.rs  sys.rs
src/components/: BranchSwitcher.svelte  Window.svelte  WindowControl.svelte
src/components/account/: AccountListItem.svelte  AccountListLoading.svelte  AccountModal.svelte
src/components/addons/: AddonsScreen.svelte
src/components/addons/datapacks/: DatapackItem.svelte  DatapacksScreen.svelte  SelectWorldScreen.svelte  WorldItem.svelte
src/components/addons/mods/: ModItem.svelte  ModsScreen.svelte
src/components/addons/resourcepacks/: ResourcePackItem.svelte  ResourcePacksScreen.svelte
src/components/addons/shaders/: ShaderItem.svelte  ShadersScreen.svelte
src/components/addons/widgets/: FilterModal.svelte  ModrinthSearchBar.svelte
src/components/announcement/: AnnouncementScreen.svelte
src/components/cape/: CapeCarousel.svelte  CapeEditor.svelte  CapePlayer.svelte  CapeScreen.svelte
src/components/changeLog/: ChangeLogScreen.svelte
src/components/clone-mc-data/: CopyMcDataProgressScreen.svelte  FirstInstallScreen.svelte  NewBranchMinecraftPathPopup.svelte  NewBranchScreen.svelte
src/components/config/: ConfigModal.svelte  ExperimentalTokenModal.svelte  LauncherSettingsScreen.svelte
src/components/config/inputs/: ConfigFileInput.svelte  ConfigFolderInput.svelte  ConfigRadioButton.svelte  ConfigSlider.svelte  ConfigTextInput.svelte  ResetSettingButton.svelte
src/components/home/: HomeScreen.svelte
src/components/home/widgets/: CopyrightLabel.svelte  CreditsModal.svelte  HomeLeftNavbar.svelte  HomeNavbar.svelte  LaunchErrorModal.svelte  SignInOutput.svelte  SkinButton.svelte
src/components/instances/: InstanceProgress.svelte  InstancesHotbar.svelte
src/components/invite/: InvitePopup.svelte
src/components/legal/: LegalScreen.svelte
src/components/loading/: LoadingScreen.svelte
src/components/log/: LogMessage.svelte  LogPopup.svelte
src/components/main/: CopyMcDataProgressScreen.svelte  CreditsModal.svelte  FirstInstallScreen.svelte  NewBranchScreen.svelte  PokemonScreen.svelte  SkinButton.svelte
src/components/maintenance-mode/: ApiOfflineScreen.svelte  ApiOfflineScreenV2.svelte  MaintenanceModeScreen.svelte  MaintenanceModeTokenModal.svelte  PrivacyPolicyScreen.svelte
src/components/mcRealApp/: McRealAppModal.svelte
src/components/modrinth/: CustomModItem.svelte  InstalledModItem.svelte  ModrinthResultItem.svelte  ModrinthScreen.svelte  ModrinthSearchBar.svelte
src/components/notification/: Notification.svelte  Notifications.svelte
src/components/profiles/: Profile.svelte  ProfileSettingsModal.svelte  ProfilesScreen.svelte
src/components/servers/: ServersScreen.svelte
src/components/servers/custom/: CreateCustomServerScreen.svelte  CustomServerDetails.svelte  CustomServerDetailsScreen.svelte  CustomServerInfoPopup.svelte  CustomServerItem.svelte
src/components/servers/custom/create/: EulaTab.svelte  LoaderVersionTab.svelte  NameIconSubdomainTab.svelte  TypeTab.svelte  VersionTab.svelte
src/components/servers/featured/: FeaturedServerItem.svelte
src/components/skin/: SkinScreen.svelte
src/components/start-progress/: MinecraftStartProgressScreen.svelte
src/components/updater/: StartUpScreen.svelte  UpdateManager.svelte
src/components/utils/: Popup.svelte  SnowOverlay.svelte  VirtualList.svelte
src/components/v2/: CopyrightLabel.svelte  CrashHeader.svelte  HomeLeftNavbar.svelte  HomeNavbar.svelte  SignInOutput.svelte  Updater.svelte
src/components/v2/buttons/: BackButton.svelte  GameButton.svelte  LegalInfoButton.svelte  SettingsButton.svelte
src/lang/: de_DE.json  en_US.json
src/logs/: Crash.svelte  LogMessage.svelte  Logs.svelte  big-scrollbar.css  crash-main.js  logs-main.js
src/pages/: About.svelte  Addons.svelte  Announcement.svelte  Capes.svelte  ChangeLog.svelte  CopyMcDataProgress.svelte  Crash.svelte  CreateCustomServer.svelte  CustomServerDetails.svelte  Datapacks.svelte  FirstInstall.svelte  Home.svelte  LauncherSettings.svelte  Legal.svelte  MinecraftClientLogs.svelte  MinecraftStartProgress.svelte  Mods.svelte  NewBranch.svelte  Profiles.svelte  Resourcepacks.svelte  Router.svelte  Servers.svelte  Shaders.svelte  Skin.svelte  TransitionWrapper.svelte  TransitionWrapper2.svelte  routes.js
src/stores/: branchesStore.js  credentialsStore.js  customServerLogsStore.js  customServerStore.js  logsStore.js  notificationStore.js  optionsStore.js  performanceStore.js  profilesStore.js
src/updater/: Updater.svelte
src/utils/: discordUtils.js  microsoftUtils.js  noriskUtils.js  popupUtils.js  svelteUtils.js  translationUtils.js
