[package]
name = "noriskclient"
version = "0.5.20"
description = "A NoRiskClient launcher for Minecraft, written in Rust using Tauri."
authors = ["NoRiskk, TimLohrer (Aim_shock)"]
license = "GNU General Public License v3.0"
repository = "https://github.com/noriskclient/noriskclient-launcher"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
# Path fix
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

# Log
log4rs = "1.3.0"
log = "0.4.20"

# Async IO
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# File Watcher
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# Error handling
anyhow = "1.0.69"
thiserror = "1.0"

# Generic
void = "1"
rand = "0.8.5"
directories = "5.0.1"
once_cell = "1.16.0"
open = "5.1.2"

# FS libs
async_zip = { version = "0.0.11", features = ["full"] }
tokio-tar = "0.3.0"
async-compression = { version= "0.3.15", features = ["gzip"] }
sanitize-filename = "0.4.0"
path-absolutize = "3.0.14"
dirs = "4.0"
async-walkdir = "2.0.0"

# OS
os_info = "3"
sysinfo = "0.28.4"

# Data
regex = "1.7.0"
urlencoding = "2.1.2"
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

sha1 = "0.10.5"
md5 = "0.7.0"  # Überprüfe die neueste Version
base16ct = {version = "0.2.0", features = ["alloc"] }

# UI library
tauri = {version = "1.4.0", features = ["api-all", "updater"] }

# HTTP library
reqwest = { version = "0.12.4", features = ["json", "multipart"] }

# Framework for serializing and deserializing data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"

# Support for the old authentication file
base64 = { version = "0.22.0" }
byteorder = { version = "1.4" }
dark-light = "1.0.0"
walkdir = "2.4.0"

# Auth Store
keyring = "2.3.1"
jsonwebtoken = "9.3.0"

# Minecraft Auth
p256 = "0.13.2"
sha2 = "0.10.8"
tracing-error = "0.2.0"
tracing = "0.1.40"

# Minecraft RCON
minecraft-client-rs = "0.1.3"

# HWID
machineid-rs = "1.2.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
